clusters/constellation/apps/new-horizons/new-horizons-client/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-horizons-client-staging
  namespace: new-horizons
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.newhorizonsgame.de"
      secretName: newhorizonsgame.de
  rules:
    - host: test.newhorizonsgame.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-horizons-client-staging
                port:
                  number: 8080
